# server/app/model/User.go
@@ -1,9 +1,6 @@
 package model
 
-import (
-	"gorm.io/gorm"
-	"time"
-)
+import "gorm.io/gorm"
 
 // User represents a user in the system.
 // swagger:model
@@ -11,32 +8,30 @@ type User struct {
 	gorm.Model
 	// Nickname of the user
 	// example: JohnDoe
+	// required: false
+	Nickname string `gorm:"size:255" json:"nickname"`
+
+	// Username of the user
+	// example: xxxxx
 	// required: true
-	Nickname string `gorm:"unique" json:"nickname"`
+	Username string `gorm:"unique,size:20;" json:"username"`
 
 	// Password of the user
 	// required: true
-	Password string `json:"password"`
+	Password string `json:"password" gorm:"size:200;not null"`
 
 	// Email of the user
 	// format: email
 	// required: false
-	Email string `gorm:"unique" json:"email"`
+	Email string `gorm:"size:255" json:"email"`
 
 	// Phone number of the user
 	// format: int64
 	// required: false
-	Phone string `gorm:"unique" json:"phone"`
+	Phone string `gorm:"size:255;type:varchar(100);" json:"phone"`
 
 	// Avatar URL of the user
-	Avatar string `json:"avatar"`
-}
-
-// GormModel gorm.Model represents the base model for gorm models.
-// swagger:model
-type GormModel struct {
-	ID        uint `gorm:"primaryKey" json:"id"`
-	CreatedAt time.Time
-	UpdatedAt time.Time
-	DeletedAt gorm.DeletedAt `gorm:"index"`
+	// example: http://xx
+	// required: false
+	Avatar string `gorm:"size: 255;not null" json:"avatar"`
 }
